--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <audio src="assets\Star_Wars_original_opening_crawl_1977.mp3" id="audio" autobuffer="autobuffer" />
+    <audio src="assets\Star_Wars_original_opening_crawl_1977.mp3" id="audio" autoplay></audio>
 
 </body>
 
